src/objects/Environment__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <label>Organization ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Use</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refreshed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Environment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Env_Org_ID_Cannot_Change</fullName>
        <active>true</active>
        <errorConditionFormula>PRIORVALUE(Organization_ID__c) &lt;&gt;Organization_ID__c</errorConditionFormula>
        <errorDisplayField>Organization_ID__c</errorDisplayField>
        <errorMessage>Organization IDs may not be changed once they are set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prod_Env_Cannot_Change_Type</fullName>
        <active>true</active>
        <description>Once an environment has been typed as &quot;Production&quot;, you are prohibited from changing the type value.</description>
        <errorConditionFormula>AND( ISPICKVAL( PRIORVALUE( Type__c ), &quot;Production&quot; ), NOT( ISPICKVAL( Type__c , &quot;Production&quot; )))</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Production environments may not have their type changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prod_Env_Status_Always_In_Use</fullName>
        <active>true</active>
        <description>Environments labeled as &quot;Production&quot; can only have a status of &quot;In Use&quot;.</description>
        <errorConditionFormula>NOT( ISPICKVAL( Status__c , &quot;In Use&quot; ) )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Production environments must have status of &quot;In Use&quot;</errorMessage>
    </validationRules>
</CustomObject>